<resources>
    <string name="app_name">C5545 BOOST</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bledevice_scanner">BLE Scanner</string>
    <string name="button_scan">Scan</string>
    <string name="connect">Connect</string>
    <string name="title_device_list">Device List</string>
    <string name="device">Device</string>
    <string name="header">Available BLE Devices</string>
    <string name="disconnected">Device is not connected</string>
    <string name="ble_connection_fail">Unable to establish connection with the BLE device !!!</string>
    <string name="control">Done</string>
    <string name="bt_not_supported">Bluetooth is not supported</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bt_on">Bluetooth was turned  on</string>
    <string name="bt_not_on">Bluetooth was not turned on</string>
    <string name="app_closing">Exiting C5545 app</string>
    <string name="bt_adapter_disable">Disable Bluetooth adapter</string>
    <string name="bt_adapter_reset">Reset Bluetooth adapter</string>
    <string name="bt_ble_on_scan">Scanning for BOOSTC5545ULP</string>
    <string-array name="device_filter"><item>C5545 Boost</item><item>BoosterPack</item><item>BOOSTC5545ULP</item></string-array>
    <string name="bt_ble_on">The Android device is not scanning. Please tap \'Scan\' to scan for BOOSTC5545ULP</string>
    <string name="bt_ble_off">Please tap \'Bluetooth icon\' to enable Bluetooth.</string>
    <string name="bt_ble_nodevice">There are no BOOSTC5545ULP advertising within range.Please tap \'Scan\' to scan for BOOSTC5545ULP.</string>
    <string name="eqlizr_closing">Exiting C5545 BOOST Equalizer </string>
    <string name="bt_terms_conds">Terms and Conditions</string>
    <string name="bt_prvcy_plcy">Privacy Policy</string>

    <!-- Options menu -->
    <string name="prefs">Preferences</string>
    <string name="progress"></string>
    <string name="agree">I agree</string>
    <string name="fwupdate">Firmware update</string>
    <string name="bt">Bluetooth Adapter</string>
    <string name="c5545home">C5545BOOST Home</string>
    <string name="tie2e">TI E2E Community</string>
    <string name="license">License</string>
    <string name="about">About</string>
    <string name="exit">Exit..</string>

    <!-- Device activity -->
    <string name="dev_addr">Device address</string>
    <string name="image">Image</string>
    <string name="title_activity_equalizer">Equalizer</string>
    <string name="equalizer_error_status">Unable to Find Reuested GATT SERVICE</string>
    <string name="play_music">Playing Music...</string>
    <string name="pause_music">Music Paused...</string>
    <string name="stop_music">Music Stopped...</string>
    <string name="progress_init">Initializing ....</string>
    <string name="progress_connect">Connecting....</string>
    <string name="progress_read_eqlzr">Reading Equalizer data...</string>
    <string name="progress_connected">Connected....</string>
    <string name="progress_read_eqlizer_fail">Unable to read the Equalizer data..</string>
    <string name="ble_service_null">BLE service is null or not connected in packetizer read</string>

</resources>
